[gd_scene load_steps=12 format=1]

[ext_resource path="res://scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/circle_red.png" type="Texture" id=2]
[ext_resource path="res://assets/x.png" type="Texture" id=3]
[ext_resource path="res://assets/pause_back.png" type="Texture" id=4]
[ext_resource path="res://assets/Group_12.png" type="Texture" id=5]
[ext_resource path="res://assets/r1.png" type="Texture" id=6]
[ext_resource path="res://assets/replay.png" type="Texture" id=7]
[ext_resource path="res://assets/plashka.png" type="Texture" id=8]
[ext_resource path="res://assets/paused.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]

resource/name = "hide"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("return/Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 44.6318, 44.632 ), Vector2( 44.6318, 44.632 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("return/Sprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("home:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 209.108, 672.417 ), Vector2( 209.108, 1818.53 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("home:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite 2:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 554.023, 836.762 ), Vector2( 554.023, 1982.87 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite 2:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("home/Sprite:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 25.1965, 16.7749 ), Vector2( 25.1965, 16.7749 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("home/Sprite:transform/rot")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("replay:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 439.592, 922.944 ), Vector2( 439.592, 2069.05 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("replay:transform/rot")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("replay/Sprite:transform/pos")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 130.179, 16.7749 ), Vector2( 130.179, 16.7749 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("replay/Sprite:transform/rot")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("return:transform/pos")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 778.7, 672.417 ), Vector2( 778.7, 1818.53 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("return:transform/rot")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite:transform/pos")
tracks/14/interp = 1
tracks/14/imported = false
tracks/14/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 210.881, 693.529 ), Vector2( 210.881, 1839.64 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite:transform/rot")
tracks/15/interp = 1
tracks/15/imported = false
tracks/15/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("return/Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 44.6318, 44.632 ), Vector2( 44.6318, 44.632 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("return/Sprite:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("home:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 209.108, -417.784 ), Vector2( 209.108, 672.417 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("home:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite 2:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 554.023, -253.44 ), Vector2( 554.023, 836.762 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite 2:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("home/Sprite:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 25.1965, 16.7749 ), Vector2( 25.1965, 16.7749 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("home/Sprite:transform/rot")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("replay:transform/pos")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 439.592, -167.258 ), Vector2( 439.592, 922.944 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("replay:transform/rot")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("replay/Sprite:transform/pos")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 130.179, 16.7749 ), Vector2( 130.179, 16.7749 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("replay/Sprite:transform/rot")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("return:transform/pos")
tracks/12/interp = 1
tracks/12/imported = false
tracks/12/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 778.7, -417.784 ), Vector2( 778.7, 672.417 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("return:transform/rot")
tracks/13/interp = 1
tracks/13/imported = false
tracks/13/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Sprite:transform/pos")
tracks/14/interp = 1
tracks/14/imported = false
tracks/14/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 210.881, -396.673 ), Vector2( 210.881, 693.529 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Sprite:transform/rot")
tracks/15/interp = 1
tracks/15/imported = false
tracks/15/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[node name="Pause" type="Node2D"]

process/pause_mode = 2
z/z = 10
script/script = ExtResource( 1 )

[node name="return" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 778.7, 672.417 )
transform/scale = Vector2( 0.5, 0.5 )
z/z = 10
normal = ExtResource( 2 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="return"]

transform/pos = Vector2( 44.6318, 44.632 )
transform/scale = Vector2( 1.07002, 1 )
z/z = 10
texture = ExtResource( 3 )
centered = false

[node name="home" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 209.108, 672.417 )
transform/scale = Vector2( 0.7, 0.7 )
z/z = 10
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="home"]

transform/pos = Vector2( 25.1965, 16.7749 )
transform/scale = Vector2( 0.683422, 0.856521 )
z/z = 10
texture = ExtResource( 5 )
centered = false

[node name="replay" type="TouchScreenButton" parent="."]

editor/display_folded = true
transform/pos = Vector2( 439.592, 922.944 )
transform/scale = Vector2( 0.604032, 0.614256 )
z/z = 10
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="replay"]

transform/pos = Vector2( 130.179, 16.7749 )
transform/scale = Vector2( 0.683422, 0.856521 )
z/z = 10
texture = ExtResource( 7 )
centered = false

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 5.0
margin/right = 1007.0
margin/bottom = 1705.0
color = Color( 1, 1, 1, 0.470588 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 210.881, 693.529 )
transform/scale = Vector2( 0.535547, 0.174261 )
texture = ExtResource( 8 )
centered = false
modulate = Color( 1, 0.560431, 0.573765, 1 )

[node name="Sprite 2" type="Sprite" parent="."]

transform/pos = Vector2( 554.023, 836.762 )
transform/scale = Vector2( 0.861194, 1 )
texture = ExtResource( 9 )

[node name="Anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "show"

[connection signal="pressed" from="return" to="." method="_on_return_pressed"]

[connection signal="pressed" from="home" to="." method="_on_home_pressed"]

[connection signal="pressed" from="replay" to="." method="_on_replay_pressed"]


